Fixed Dark Mode Header on Mobile

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -200,7 +200,7 @@ header .socialLink:hover>img {
 .line {
     fill: none;
     transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
-    stroke: var(--background-color);
+    stroke: white;
     stroke-width: 5.5;
     stroke-linecap: round;
 }
